Fix extra space

--- a/wp-content/themes/Divi-ECRS/css/tabs.css
+++ b/wp-content/themes/Divi-ECRS/css/tabs.css
@@ -100,3 +100,9 @@ h1.extra-title {
 #page-header {
   display: none;
 }
+
+@media (min-width: 981px){
+  #et-main-area {
+    margin-top: -10px;
+  }
+}
